[gd_scene load_steps=6 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://MenuCheckButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://VolumeSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://MouseSlider.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/game_settings_font.tres" type="DynamicFont" id=5]

[node name="Settings" type="CenterContainer"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -484.0
margin_top = -247.0
margin_right = 484.0
margin_bottom = 247.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -484.0
margin_top = -247.0
margin_right = 484.0
margin_bottom = 247.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 100
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 434.0
margin_bottom = 494.0
rect_min_size = Vector2( 434, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="Shadows" parent="HBoxContainer/VBoxContainer" index="0" instance=ExtResource( 2 )]

margin_right = 434.0
text = "Shadows"
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="Glow" parent="HBoxContainer/VBoxContainer" index="1" instance=ExtResource( 2 )]

margin_top = 83.0
margin_right = 434.0
margin_bottom = 126.0
text = "Glow"
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="Reflections" parent="HBoxContainer/VBoxContainer" index="2" instance=ExtResource( 2 )]

margin_top = 166.0
margin_right = 434.0
margin_bottom = 209.0
text = "Reflections"

[node name="MusicVolume" parent="HBoxContainer/VBoxContainer" index="3" instance=ExtResource( 3 )]

margin_top = 249.0
margin_right = 434.0
margin_bottom = 304.0
bus_name = "Music"

[node name="EffectsVolume" parent="HBoxContainer/VBoxContainer" index="4" instance=ExtResource( 3 )]

margin_top = 344.0
margin_right = 434.0
margin_bottom = 399.0
bus_name = "Effects"

[node name="VolumeSlider" parent="HBoxContainer/VBoxContainer" index="5" instance=ExtResource( 4 )]

margin_top = 439.0
margin_right = 434.0
margin_bottom = 494.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 534.0
margin_right = 968.0
margin_bottom = 494.0
rect_min_size = Vector2( 434, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="Fullscreen" parent="HBoxContainer/VBoxContainer2" index="0" instance=ExtResource( 2 )]

margin_right = 434.0
text = "Fullscreen"
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 83.0
margin_right = 434.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Key bindings:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 158.0
margin_right = 434.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 260, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Navigation:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 434.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "WSAD, ↑↓←→"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 233.0
margin_right = 434.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 260, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Inventory:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 349.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "F1-F4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 308.0
margin_right = 434.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 260, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Interact (3D):"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 315.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "LMB"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 383.0
margin_right = 434.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 260, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Dismiss popup:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer4" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 315.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Esc"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 458.0
margin_right = 434.0
margin_bottom = 493.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer5" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 260, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Skip animation:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts", "custom_styles" ]

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer5" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 400.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Esc, LMB"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[connection signal="toggled" from="HBoxContainer/VBoxContainer/Shadows" to="." method="_on_Shadows_toggled"]

[connection signal="toggled" from="HBoxContainer/VBoxContainer/Glow" to="." method="_on_Glow_toggled"]

[connection signal="toggled" from="HBoxContainer/VBoxContainer/Reflections" to="." method="_on_Reflections_toggled"]

[connection signal="toggled" from="HBoxContainer/VBoxContainer2/Fullscreen" to="." method="_on_Fullscreen_toggled"]


